--- a/app/src/main/res/values-de/strings_files.xml
+++ b/app/src/main/res/values-de/strings_files.xml
@@ -49,7 +49,7 @@
     <string name="alert_delete_folder_title">Ordner löschen</string>
     <string name="alert_delete_folder_msg">Möchten Sie den Ordner wirklich löschen <b>%s</b>? Jede Datei in diesem Ordner wird auch gelöscht. Diese Aktion kann nicht rückgängig gemacht werden.</string>
 
-    <string name="files_new_folder">Neuer Ordner</string>
+    <string name="files_create_new_folder">Neuer Ordner</string>
     <string name="files_move_file">Verschiebedatei</string>
     <string name="files_upload_file">Datei senden</string>
     <string name="files_sort_files">Sortieren</string>
