--- a/app/src/main/res/values-it/strings_files.xml
+++ b/app/src/main/res/values-it/strings_files.xml
@@ -49,7 +49,7 @@
 
     <string name="alert_cant_delete_msg">Printoid non è possibile eliminare %s</string>
 
-    <string name="files_new_folder">Nuova Cancella</string>
+    <string name="files_create_new_folder">Nuova Cancella</string>
     <string name="files_move_file">Sposta file</string>
     <string name="files_upload_file">Invia File</string>
     <string name="files_sort_files">Ordina i file</string>
