--- a/app/src/main/res/values/strings_render.xml
+++ b/app/src/main/res/values/strings_render.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string name="render_activity_name" translatable="false">Printoid Viewer</string>
+
     <string name="download_file_dialog_title">Download in progress</string>
     <string name="download_file_dialog_msg">Printoid is downloading your file, please wait…</string>
 
