--- a/app/src/main/res/values-de/strings_render.xml
+++ b/app/src/main/res/values-de/strings_render.xml
@@ -20,8 +20,7 @@
     <string name="load_file_alert_title">Rendern abgebrochen</string>
     <string name="load_file_alert_msg">Das Rendern der Datei hat nicht geklappt. Bitte erneut versuchen, oder den Entwickler von Printoid kontaktieren.</string>
 
-    <string name="render_selected_layer">%1$d / %2$d</string>
-    <string name="render_layer">Schicht:</string>
+    <string name="render_selected_layer">Schicht: %1$d / %2$d</string>
     <string name="render_selected_layer_z">Z: %s</string>
     <string name="render_Z">Z:</string>
 
