[DEV] Fix issue with "connection to a printer"

--- a/app/src/main/res/values/strings_connect.xml
+++ b/app/src/main/res/values/strings_connect.xml
@@ -53,7 +53,7 @@
     <string name="printer_disconnected">Printer disconnected</string>
 
     <!-- PRINTER CONNECTION SETTINGS -->
-    <string name="select_tty_title">Connection to a printer</string>
+    <string name="select_tty_title">Connection with a printer</string>
     <string name="select_tty_keep">Save connection settings</string>
     <string name="select_tty">Serial port</string>
     <string name="select_tty_profile">Printer profile</string>
