--- a/app/src/main/res/values-it/strings_cmds.xml
+++ b/app/src/main/res/values-it/strings_cmds.xml
@@ -5,7 +5,7 @@
     <string name="commands_history_label">Reseconto GCODE</string>
     <string name="commands_editing_label">Editor Commandi</string>
 
-    <string name="abitrary_gcode_command">comandi GCODE</string>
+    <string name="abitrary_gcode_command">Invia un comando GCODE…</string>
     <string name="add_command">Inserisci nuovo comando</string>
     <string name="add_command_type">Tipo</string>
     <string name="add_command_curl_type">Metodo</string>
