--- a/app/src/main/res/values-ru/strings_cmds.xml
+++ b/app/src/main/res/values-ru/strings_cmds.xml
@@ -5,7 +5,7 @@
     <string name="commands_history_label">GCODE история</string>
     <string name="commands_editing_label">Редактор команд</string>
 
-    <string name="abitrary_gcode_command">Консоль GCode</string>
+    <string name="abitrary_gcode_command">Отправить команду GCODE…</string>
     <string name="add_command">Добавить команду</string>
     <string name="add_command_type">Тип</string>
     <string name="add_command_curl_type">Mетод</string>
