--- a/app/src/main/res/values/strings_cmds.xml
+++ b/app/src/main/res/values/strings_cmds.xml
@@ -5,7 +5,7 @@
     <string name="commands_history_label">GCODE history</string>
     <string name="commands_editing_label">Command editor</string>
 
-    <string name="abitrary_gcode_command">GCODE command</string>
+    <string name="abitrary_gcode_command">Send a GCODE command…</string>
     <string name="add_command">Add new command</string>
     <string name="add_command_type">Type</string>
     <string name="add_command_curl_type">Method</string>
