--- a/app/src/main/res/values-es/strings_files.xml
+++ b/app/src/main/res/values-es/strings_files.xml
@@ -76,4 +76,6 @@
 
     <string name="download_file_done">Archivo descargado a su almacenamiento interno (%s)</string>
 
+    <string name="upload_empty_folder">Esta carpeta no contiene archivos 3D!</string>
+
 </resources>
