--- a/app/src/main/res/values-nl/strings_files.xml
+++ b/app/src/main/res/values-nl/strings_files.xml
@@ -76,4 +76,6 @@
 
     <string name="download_file_done">Bestand gedownload naar uw interne opslag (%s)</string>
 
+    <string name="upload_empty_folder">Deze map bevat geen 3D-bestanden!</string>
+
 </resources>
