--- a/app/src/main/res/values-pt/strings_files.xml
+++ b/app/src/main/res/values-pt/strings_files.xml
@@ -76,4 +76,6 @@
 
     <string name="download_file_done">Arquivo baixado para o seu armazenamento interno (%s)</string>
 
+    <string name="upload_empty_folder">Esta pasta não contém arquivos 3D!</string>
+
 </resources>
